crates/unsoundness_checker/tests/snapshots/extensive/markdown_test__mangled_dunder_instance_variable.snap
---
source: crates/unsoundness_checker/tests/markdown_test.rs
expression: combined_output
---
### Basic mangled variable assignment

warning[mangled-dunder-instance-variable]: Explicit use of mangled attribute `_HiddenDunderVariables__str_x` can bypass type checking and lead to runtime type errors.
 --> main.py:4:9
  |
2 |     def __init__(self, x: int) -> None:
3 |         self.__str_x = str(x)
4 |         self._HiddenDunderVariables__str_x = x
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
5 |
6 |     def get_str_x(self) -> str:
  |
info: rule `mangled-dunder-instance-variable` was selected in the configuration file


### External mangled variable access

warning[mangled-dunder-instance-variable]: Explicit use of mangled attribute `_HiddenDunderVariables__str_x` can bypass type checking and lead to runtime type errors.
 --> main.py:6:1
  |
5 | hidden_dunder_variables = HiddenDunderVariables(42)
6 | hidden_dunder_variables._HiddenDunderVariables__str_x = 1
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
info: rule `mangled-dunder-instance-variable` was selected in the configuration file


### Multiple mangled variables

warning[mangled-dunder-instance-variable]: Explicit use of mangled attribute `_Container__data` can bypass type checking and lead to runtime type errors.
 --> main.py:7:1
  |
6 | obj = Container()
7 | obj._Container__data = 123
  | ^^^^^^^^^^^^^^^^^^^^
8 | obj._Container__count = "not_int"
  |
info: rule `mangled-dunder-instance-variable` was selected in the configuration file

warning[mangled-dunder-instance-variable]: Explicit use of mangled attribute `_Container__count` can bypass type checking and lead to runtime type errors.
 --> main.py:8:1
  |
6 | obj = Container()
7 | obj._Container__data = 123
8 | obj._Container__count = "not_int"
  | ^^^^^^^^^^^^^^^^^^^^^
  |
info: rule `mangled-dunder-instance-variable` was selected in the configuration file


### Mangled in method

warning[mangled-dunder-instance-variable]: Explicit use of mangled attribute `_Processor__value` can bypass type checking and lead to runtime type errors.
 --> main.py:6:9
  |
5 |     def update(self) -> None:
6 |         self._Processor__value = "wrong_type"
  |         ^^^^^^^^^^^^^^^^^^^^^^
  |
info: rule `mangled-dunder-instance-variable` was selected in the configuration file


### Reading mangled variable

warning[mangled-dunder-instance-variable]: Explicit use of mangled attribute `_Secret__secret` can bypass type checking and lead to runtime type errors.
 --> main.py:6:1
  |
5 | obj = Secret()
6 | obj._Secret__secret = 123
  | ^^^^^^^^^^^^^^^^^^^
7 | value = obj._Secret__secret
  |
info: rule `mangled-dunder-instance-variable` was selected in the configuration file

warning[mangled-dunder-instance-variable]: Explicit use of mangled attribute `_Secret__secret` can bypass type checking and lead to runtime type errors.
 --> main.py:7:9
  |
5 | obj = Secret()
6 | obj._Secret__secret = 123
7 | value = obj._Secret__secret
  |         ^^^^^^^^^^^^^^^^^^^
  |
info: rule `mangled-dunder-instance-variable` was selected in the configuration file


### Mangled in property

warning[mangled-dunder-instance-variable]: Explicit use of mangled attribute `_Managed__data` can bypass type checking and lead to runtime type errors.
 --> main.py:7:16
  |
5 |     @property
6 |     def data(self) -> int:
7 |         return self._Managed__data
  |                ^^^^^^^^^^^^^^^^^^^
8 |
9 | obj = Managed()
  |
info: rule `mangled-dunder-instance-variable` was selected in the configuration file

warning[mangled-dunder-instance-variable]: Explicit use of mangled attribute `_Managed__data` can bypass type checking and lead to runtime type errors.
  --> main.py:10:1
   |
 9 | obj = Managed()
10 | obj._Managed__data = "not_int"
   | ^^^^^^^^^^^^^^^^^^
   |
info: rule `mangled-dunder-instance-variable` was selected in the configuration file


### Mangled in inheritance

warning[mangled-dunder-instance-variable]: Explicit use of mangled attribute `_Child__child_var` can bypass type checking and lead to runtime type errors.
  --> main.py:12:1
   |
10 | child = Child()
11 | child._Parent__parent_var = 123
12 | child._Child__child_var = "wrong"
   | ^^^^^^^^^^^^^^^^^^^^^^^
   |
info: rule `mangled-dunder-instance-variable` was selected in the configuration file


### Mangled with classmethod


### Nested class mangled

warning[mangled-dunder-instance-variable]: Explicit use of mangled attribute `_Inner__value` can bypass type checking and lead to runtime type errors.
 --> main.py:7:1
  |
6 | inner = Outer.Inner()
7 | inner._Inner__value = "wrong"
  | ^^^^^^^^^^^^^^^^^^^
  |
info: rule `mangled-dunder-instance-variable` was selected in the configuration file


### Mangled in init vs method

warning[mangled-dunder-instance-variable]: Explicit use of mangled attribute `_State__state` can bypass type checking and lead to runtime type errors.
 --> main.py:6:9
  |
5 |     def update(self) -> None:
6 |         self._State__state = 123
  |         ^^^^^^^^^^^^^^^^^^
  |
info: rule `mangled-dunder-instance-variable` was selected in the configuration file


### Multiple classes same mangled name

warning[mangled-dunder-instance-variable]: Explicit use of mangled attribute `_First__data` can bypass type checking and lead to runtime type errors.
  --> main.py:11:1
   |
 9 | f = First()
10 | s = Second()
11 | f._First__data = "wrong"
   | ^^^^^^^^^^^^^^
12 | s._Second__data = 999
   |
info: rule `mangled-dunder-instance-variable` was selected in the configuration file

warning[mangled-dunder-instance-variable]: Explicit use of mangled attribute `_Second__data` can bypass type checking and lead to runtime type errors.
  --> main.py:12:1
   |
10 | s = Second()
11 | f._First__data = "wrong"
12 | s._Second__data = 999
   | ^^^^^^^^^^^^^^^
   |
info: rule `mangled-dunder-instance-variable` was selected in the configuration file


### Mangled in lambda


### Mangled with del

warning[mangled-dunder-instance-variable]: Explicit use of mangled attribute `_Temporary__temp` can bypass type checking and lead to runtime type errors.
 --> main.py:6:1
  |
5 | obj = Temporary()
6 | obj._Temporary__temp = 123
  | ^^^^^^^^^^^^^^^^^^^^
  |
info: rule `mangled-dunder-instance-variable` was selected in the configuration file


### Mangled in class variable


### Complex mangled access

warning[mangled-dunder-instance-variable]: Explicit use of mangled attribute `_Complex__x` can bypass type checking and lead to runtime type errors.
 --> main.py:8:1
  |
6 | obj = Complex()
7 | values = {"x": "wrong", "y": 123}
8 | obj._Complex__x = values["x"]
  | ^^^^^^^^^^^^^^^
9 | obj._Complex__y = values["y"]
  |
info: rule `mangled-dunder-instance-variable` was selected in the configuration file

warning[mangled-dunder-instance-variable]: Explicit use of mangled attribute `_Complex__y` can bypass type checking and lead to runtime type errors.
 --> main.py:9:1
  |
7 | values = {"x": "wrong", "y": 123}
8 | obj._Complex__x = values["x"]
9 | obj._Complex__y = values["y"]
  | ^^^^^^^^^^^^^^^
  |
info: rule `mangled-dunder-instance-variable` was selected in the configuration file
